--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "4.11.4",
     "@material-ui/pickers": "3.3.10",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "0.21.1",
     "connected-react-router": "6.9.1",
     "date-fns": "2.21.2",
     "measure-browser-performance": "1.0.0",
