--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 REACT_APP_ANALYTICS_ENDPOINT=http://localhost:5555/api/v1/metrics/create
+REACT_APP_BASE_SERVICE_URL=http://localhost:5555/api/v1/metrics
