--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "coverage": "react-scripts test --coverage"
+    "coverage": "react-scripts test --coverage",
+    "test:all": "react-scripts test --watchAll=false"
   },
   "browserslist": {
     "production": [
@@ -43,6 +44,12 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.12.0",
-    "@testing-library/react": "11.2.6"
+    "@testing-library/react": "11.2.6",
+    "husky": "6.0.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "npm run test:all"
+    }
   }
 }
