--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
   "devDependencies": {
     "@testing-library/jest-dom": "5.12.0",
     "@testing-library/react": "11.2.6",
-    "husky": "4.0.0"
+    "husky": "4.0.0",
+    "lint-staged": "11.0.0"
   },
   "husky": {
     "hooks": {
