--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "coverage": "react-scripts test --coverage",
-    "test:all": "CI=true react-scripts test --watchAll=false"
+    "test:all": "react-scripts test --watchAll"
   },
   "browserslist": {
     "production": [
@@ -45,13 +45,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "5.12.0",
     "@testing-library/react": "11.2.6",
-    "husky": "4.3.8",
+    "husky": "6.0.0",
     "lint-staged": "11.0.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "react-scripts test",
-      "pre-push": "npm run test:all"
-    }
   }
 }
