--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "coverage": "react-scripts test --coverage",
-    "test:all": "react-scripts test --watchAll",
-    "prepare": "husky install"
+    "test:all": "react-scripts test --watchAll"
   },
   "browserslist": {
     "production": [
@@ -46,7 +45,6 @@
   "devDependencies": {
     "@testing-library/jest-dom": "5.12.0",
     "@testing-library/react": "11.2.6",
-    "husky": "6.0.0",
     "lint-staged": "11.0.0"
   }
 }
